--- a/src/pug/_header.pug
+++ b/src/pug/_header.pug
@@ -28,12 +28,12 @@ header(class='header shadow-md lg:shadow-none py-2 lg:pt-5 lg:pb-0 d')
                             a(href="#" class="hover:opacity-80") Вход
                         div(class="px-4")
                             a(href="#" class="hover:opacity-80") Регистрация
-                div(class="text-sm leading-none flex items-center lg:items-start lg:mt-4")
+                div(class="text-xs leading-none flex items-center lg:items-start lg:mt-4")
                     div(class="hidden lg:block bg-[#E2E2E2] h-[4.375rem] w-[8.5rem] xl:w-[15.8rem] mr-[1.875rem]")
                     div(class="whitespace-nowrap grid grid-flow-col lg:flex lg:flex-col items-center lg:items-start gap-x-4 lg:gap-x-0 lg:gap-y-2.5 ml-auto xl:ml-0 mr-8")
                         a(href='#' class='flex items-end hover:opacity-80')
                             div(class="w-5 flex justify-center mr-2.5")
-                                <svg width="19" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg style="margin-left: -3px" width="20" height="18" viewBox="0 0 19 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_1_37)">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M8.51885 14.804C9.3973 14.804 10.1097 15.5203 10.1097 16.4033C10.1097 17.2866 9.39721 18.0026 8.51885 18.0026C7.64034 18.0026 6.92794 17.2866 6.92794 16.4033C6.92794 15.5203 7.64034 14.804 8.51885 14.804ZM8.18181 16.4033C8.18181 16.1018 8.54569 15.9511 8.7572 16.1638C8.88879 16.2959 8.88879 16.5108 8.7572 16.6431C8.54578 16.8555 8.18181 16.7048 8.18181 16.4033Z" fill="black"/>
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M15.9429 14.804C16.8214 14.804 17.5337 15.5203 17.5337 16.4033C17.5337 17.2866 16.8214 18.0026 15.9429 18.0026C15.0644 18.0026 14.352 17.2866 14.352 16.4033C14.352 15.5203 15.0644 14.804 15.9429 14.804ZM15.6057 16.4033C15.6057 16.1018 15.9698 15.9511 16.1813 16.1638C16.3129 16.2959 16.3129 16.5108 16.1813 16.6431C15.9698 16.8555 15.6057 16.7048 15.6057 16.4033Z" fill="black"/>
@@ -48,7 +48,7 @@ header(class='header shadow-md lg:shadow-none py-2 lg:pt-5 lg:pb-0 d')
                             div(class='whitespace-nowrap') <span>3 шт.</span> <span class="hidden lg:inline">/ 17 250 р.</span>
                         a(href='#' class='flex items-end hover:opacity-80')
                             div(class="w-5 flex justify-center mr-2.5")
-                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="20" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g clip-path="url(#clip0_1_35)">
                                 <path d="M3.2515 8.96117L2.51242 13.4919C2.4535 13.8518 2.83792 14.1219 3.15583 13.9452L7 11.8207L10.8442 13.9458C11.1592 14.1208 11.5471 13.8559 11.4876 13.4925L10.7485 8.96176L13.8752 5.75692C14.1231 5.50317 13.9808 5.07267 13.6284 5.019L9.32458 4.36159L7.3955 0.252586C7.25142 -0.0542474 6.748 -0.0542474 6.60392 0.252586L4.67542 4.361L0.371583 5.01842C0.0180826 5.07267 -0.123084 5.50259 0.124833 5.75634L3.2515 8.96117Z" fill="black"/>
                                 </g>
@@ -61,7 +61,7 @@ header(class='header shadow-md lg:shadow-none py-2 lg:pt-5 lg:pb-0 d')
                             div(class="hidden lg:block") Избранное (7)
                         a(href='#' class='flex items-end hover:opacity-80')
                             div(class="w-5 flex justify-center mr-2.5")
-                                <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="20" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M17.4726 5.49518H17.2648L15.138 0.324656C15.058 0.129944 14.8641 0.00227356 14.6485 0.00227356C14.5799 0.00227356 14.5137 0.0152276 14.4526 0.0389988L10.8067 1.45686C10.5018 1.04314 10.0507 0.737983 9.52731 0.613518C9.07731 0.529969 8.6367 0.578704 8.47266 0.613518C7.50133 0.84442 6.77813 1.69751 6.77813 2.71234C6.77813 2.8153 6.78611 2.91653 6.80052 3.01576L3.15568 4.43323L3.15554 4.43337C3.02426 4.48465 2.91659 4.58612 2.86193 4.71887L0.735121 9.88941H0.527344C0.236068 9.88941 0 10.1191 0 10.4022C0 11.8966 1.2501 13.1123 2.78668 13.1123H3.91648C5.45305 13.1123 6.70317 11.8966 6.70317 10.4022C6.70317 10.1191 6.4671 9.88941 6.17583 9.88941H5.96791L4.03706 5.19511L7.19329 3.96766C7.4983 4.3814 7.94929 4.68657 8.47266 4.81087V12.9402H7.87033C6.33375 12.9402 5.09864 13.9927 5.09864 15.4872C5.09864 15.7704 5.33482 16 5.62599 16H12.4043C12.6954 16 12.9316 15.8029 12.9316 15.649V15.4866C12.9316 13.9927 11.6662 12.9402 10.1296 12.9402H9.52731V4.81087C10.4986 4.58011 11.2218 3.72701 11.2218 2.71234C11.2218 2.60924 11.2139 2.50801 11.1996 2.40879L13.7018 1.43563L12.0321 5.49518H11.8241C11.533 5.49518 11.2968 5.72475 11.2968 6.008C11.2968 7.50226 12.5469 8.71795 14.0836 8.71795H15.2133C16.7498 8.71795 18 7.50226 18 6.008C18 5.72475 17.7639 5.49518 17.4726 5.49518ZM2.78668 12.0865H3.91648C4.68745 12.0865 5.34252 11.5941 5.56622 10.9156C5.56545 10.9155 5.56474 10.9154 5.564 10.9153C5.5633 10.9152 5.56256 10.9151 5.56182 10.915H1.13681C1.36038 11.5938 2.01544 12.0865 2.78668 12.0865ZM1.87111 9.88941H4.83205L3.35151 6.29019L1.87111 9.88941ZM6.23531 14.9744H11.7949C11.5715 14.2957 10.901 13.9658 10.1298 13.9658H7.87033C7.09893 13.9658 6.45887 14.2957 6.23531 14.9744ZM7.83281 2.7122C7.83281 3.33814 8.35647 3.84722 8.99997 3.84722C9.64364 3.84722 10.1672 3.33814 10.1672 2.7122C10.1672 2.0864 9.6435 1.57719 8.99997 1.57719C8.35647 1.57719 7.83281 2.0864 7.83281 2.7122ZM16.1288 5.49518L14.6485 1.89597L13.1679 5.49518H16.1288ZM14.0836 7.69231H15.2133C15.9844 7.69231 16.6393 7.19976 16.863 6.52123C16.8616 6.5211 16.8601 6.52096 16.8586 6.52082H12.4336C12.6572 7.19952 13.3124 7.69231 14.0836 7.69231Z" fill="black"/>
                                 </svg>
                             div(class="hidden lg:block") К сравнению (5)
@@ -84,7 +84,7 @@ header(class='header shadow-md lg:shadow-none py-2 lg:pt-5 lg:pb-0 d')
                                 <svg class="flex-shrink-0 mr-1 mt-0.5" width="7" height="7" viewBox="0 0 7 7" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M0.5 7V0L7 3.5L0.5 7Z" fill="#252525"/>
                                 </svg>
-                                div сменить
+                                div(class='underline') сменить
             div(class='bars ml-6 lg:hidden')
                 <svg width="30" height="21" viewBox="0 0 30 21" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="30" height="5" rx="2" fill="currentColor"/><rect y="8" width="30" height="5" rx="2" fill="currentColor"/><rect y="16" width="30" height="5" rx="2" fill="currentColor"/></svg>
         div(class='main-menu hidden lg:block font-bold text-xs xl:text-sm text-white overflow-hidden rounded-md mt-8')
@@ -111,7 +111,7 @@ header(class='header shadow-md lg:shadow-none py-2 lg:pt-5 lg:pb-0 d')
                             a(href='#' class='flex items-center justify-center h-full text-white hover:opacity-80 px-3 xl:px-5') Акксесуары
                 div()
                     a(href='#' class='px-3 py-1.5 h-full flex items-center justify-center bg-yellow text-dark cursor-pointer uppercase hover:opacity-80') Распродажа
-div(class='mobile-nav hidden fixed top-0 left-0 bg-white w-full h-full')
+div(class='mobile-nav hidden fixed top-0 left-0 bg-white w-full h-full z-10')
     div(class='flex flex-col h-full')
         div(class='container py-4')
             <svg class='mobile-nav__close block ml-auto' width="16" height="17" viewBox="0 0 16 17" fill="none">
