--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,8 @@
 @tailwind utilities;
 
 @import "node_modules/magnific-popup/dist/magnific-popup";
+@import "node_modules/slick-carousel/slick/slick";
+
 
 
 $root-font-size: 16;
@@ -81,6 +83,7 @@ a {
 
 .main-menu {
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.25);
+  border-radius: s(6);
   
   &__nav {
     li.active {
@@ -92,3 +95,28 @@ a {
     }
   }
 }
+
+
+.slide {
+  font-size: 90px;
+  padding:10px 0;
+  text-align: center;
+  padding: 0 15px;
+}
+.slide__inner.locked  { background: rgba(255,255,0,0.5); }
+
+.slick-prev, .slick-next {
+  position: absolute;
+  transform: translateY(-100%);
+  top:50%;
+  cursor: pointer;
+}
+
+.slick-prev {
+  left: -15px;
+}
+
+.slick-next {
+  right: -15px;
+}
+
